Added a few elements

--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uppgift 2</title>
 
+    <styles>
+
+    </styles>
+</head>
+<body>
+    <header>
+        <span>Uppgift 2</span>
+
+        <nav>
+            <ul class="list1">
+                <li>Hem</li>
+                <li>Om</li>
+                <li>Produkter</li>
+                <li>Kontakt</li>
+            </ul>
+        </nav>
+
+    </header>
+
+
+    <main>
+        <section>
+            <h2>Meta</h2>
+            <ul>
+                <li>HTML : Huvudelement som innehåller htmlfilen</li>
+                <li>Head : En contianer för metadata, data om data</li>
+                <li>Meta : Finns för att ge data om stuktur</li>
+                <li>Title : Titeln/namnet på hemsidan</li>
+                <li>Style : Innehåller css-stilen på hemsidan</li>
+            </ul>
+        </section>
+        <section class="special">
+            <h2>Design/Innehåll</h2>
+            <ul>
+                <li>Body : Documentets body</li>
+                <li>Header : Sidhuvud ineehåller information om hemsidan</li>
+                <li>Main : innehållet på sidan, innehåller flera sections</li>
+                <li>Section : En del av dokumentet</li>
+                <li>Footer : Innehållet på slutet av sidan, som länkar</li>
+            </ul>
+        </section>  
+        <section
+        class="special">
+            <h2>Text och Rubriker</h2>
+            <ul>
+                <li>h1-6 : Headers i olika storlekar, rubriker med andra ord</li>
+                <li>p : Paragraph element/brödtext</li>
+            </ul>
+              
+        </section>  
+
+        <section>
+            <h2>CSS Element</h2>
+            <ul>
+                <li>font-family : </li>
+                <li>background-color : </li>
+                <li>background : </li>
+                <li>Font-size : </li>
+                <li>margin-left/right/up/down : </li>
+                <li>margin : </li>
+                <li>color : </li>
+                <li>padding : </li>
+                <li>border : </li>
+                <li>border-radius : </li>
+                <li>align-items : </li>
+                <li>justify-content : </li>
+                <li>gap : </li>
+                <li>font-weight : </li>
+                <li>list-style : </li>
+            </ul>
+        </section>
+    </main>
+
+
+    <footer>
+
+    </footer>
+</body>
+</html>
